--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
             <div class="display" id="display">
 
             </div>
-            <button class="btn btn1" id="num1">1</button>
-            <button class="btn btn2">2</button>
-            <button class="btn btn3">3</button>
-            <button class="btn btn4">4</button>
-            <button class="btn btn5">5</button>
-            <button class="btn btn6">6</button>
-            <button class="btn btn7">7</button>
-            <button class="btn btn8">8</button>
-            <button class="btn btn9">9</button>
+            <button class="btn btn1 btn-js">1</button>
+            <button class="btn btn2 btn-js">2</button>
+            <button class="btn btn3 btn-js">3</button>
+            <button class="btn btn4 btn-js">4</button>
+            <button class="btn btn5 btn-js">5</button>
+            <button class="btn btn6 btn-js">6</button>
+            <button class="btn btn7 btn-js">7</button>
+            <button class="btn btn8 btn-js">8</button>
+            <button class="btn btn9 btn-js">9</button>
             <button class="btn btn-delete" id="delete">AC</button>
-            <button class="btn btn-parenthesis">()</button>
-            <button class="btn btn-percent">%</button>
-            <button class="btn btn-division">/</button>
-            <button class="btn btn-multiplication">X</button>
-            <button class="btn btn-rest">-</button>
-            <button class="btn btn-plus">+</button>
-            <button class="btn btn-equal">=</button>
-            <button class="btn btn-cero">0</button>
-            <button class="btn btn-comma">,</button>
+            <button class="btn btn-parenthesis-open btn-js">(</button>
+            <button class="btn btn-parenthesis-close btn-js">)</button>
+            <button class="btn btn-division btn-js">/</button>
+            <button class="btn btn-multiplication btn-js">*</button>
+            <button class="btn btn-rest btn-js">-</button>
+            <button class="btn btn-plus btn-js">+</button>
+            <button class="btn btn-equal" id="equal">=</button>
+            <button class="btn btn-cero btn-js">0</button>
+            <button class="btn btn-comma btn-js">.</button>
         </div>
     </main>
     <footer>
